# multifaith

./: .gitignore  FINDINGS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/gold/: sample.jsonl
docs/: annotation_guidelines.md  data_card.md  eu_ai_act_mapping.md
experiments/: run_eval.py
experiments/configs/: default.yaml  demo.yaml
results/: FINDINGS_TEMPLATE.md
src/multifaith/: __init__.py  cli.py  harness.py  types.py
src/multifaith/analysis/: __init__.py  breakdown.py  metrics.py
src/multifaith/data/: __init__.py  loader.py
src/multifaith/scorers/: __init__.py  base.py  classifier.py  heuristic.py  llm_judge.py  nli_scorer.py
tests/: test_core.py
tools/: annotate.py
